--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -17,7 +17,7 @@ aside {
   height: 357px;
   right: 0px;
   top: 220px;
-  background: #86D3F4;
+  background: #86d3f4;
 
   .message {
     margin: 20px 0px;
@@ -65,23 +65,22 @@ aside {
     flex-grow: 0;
     margin: 20px 0px;
   }
-  .btn {
-    margin: 10px 0px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    position: static;
-    width: 156px;
-    height: 52px;
-    left: 47.5px;
-    top: 295px;
-
-    background: #000000;
-    color: #86D3F4;
-    order: 4;
-  }
 }
+.btn {
+  margin: 10px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 
+  position: static;
+  width: 156px;
+  height: 52px;
+  left: 47.5px;
+  top: 295px;
 
+  background: #000000;
+  color: #86d3f4;
+  order: 4;
+}
