--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -73,6 +73,7 @@ aside {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  text-decoration: none;
 
   position: static;
   width: 156px;
