--- a/src/scssComponents/Mixins.scss
+++ b/src/scssComponents/Mixins.scss
@@ -1,8 +1,19 @@
-@mixin border() {
-  border: 1px solid #000;
+@mixin slideAnimation() {
+  animation: slide 1s ease 0.2s forwards;
+  height: 0px;
+
+  @keyframes slide {
+    from { height: 0px; }
+    to { height: 720px; }
+  }
 }
 
-@mixin gridAndContentCenter() {
-  display: grid;
-  justify-content: center;
+@mixin fadeAnimation() {
+  animation: fade 1s ease 0.8s forwards;
+  opacity: 0;
+
+  @keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 }
