--- a/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
+++ b/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
@@ -15,4 +15,52 @@
 
   background: #86d3f4;
   @include fadeAnimation();
+
+  .tEnterNum {
+    position: static;
+    left: 14.21%;
+    right: 14.21%;
+    top: 9.99%;
+    bottom: 81.69%;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+    flex: none;
+    flex-grow: 0;
+    margin: 13px 0px;
+  }
+
+  .tWillContact {
+    position: static;
+    left: 5.66%;
+    right: 5.66%;
+    top: 27.18%;
+    bottom: 68.38%;
+
+    /* Sub text */
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+    /* Inside auto layout */
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    margin: 13px 0px;
+  }
 }
