--- a/src/components/UI/buttons/phoneButton/PhoneButton.module.scss
+++ b/src/components/UI/buttons/phoneButton/PhoneButton.module.scss
@@ -12,7 +12,8 @@
   box-sizing: border-box;
 }
 .btn:hover {
-  background-color: gray;
+  background-color: black;
+  color: white;
 }
 
 .twoCells {
