--- a/src/components/UI/buttons/submit/Submit.module.scss
+++ b/src/components/UI/buttons/submit/Submit.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   padding: 16px 19px;
+  cursor: pointer;
 
   position: static;
   left: 12.63%;
@@ -21,4 +22,8 @@
   order: 6;
   flex-grow: 0;
   margin: 13px 0px;
+}
+.submitBtn:hover {
+  background: black;
+  color: white;
 }
