--- a/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
+++ b/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //padding: 40px 24px;
 
   position: absolute;
   width: 380px;
@@ -18,14 +17,14 @@
 
   .tEnterNum {
     position: static;
+    // width: 272px;
+    height: 60px;
     left: 14.21%;
     right: 14.21%;
     top: 9.99%;
     bottom: 81.69%;
 
     font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 26px;
     line-height: 30px;
     display: flex;
@@ -33,7 +32,6 @@
     text-align: center;
 
     color: #000000;
-    flex: none;
     flex-grow: 0;
     margin: 13px 0px;
   }
