--- a/src/pages/getDoggy/GetDoggy.module.scss
+++ b/src/pages/getDoggy/GetDoggy.module.scss
@@ -5,22 +5,6 @@
   width: 1280px;
   @include slideAnimation();
 
-  .closeBtn {
-    position: absolute;
-    left: 91.56%;
-    right: 1.56%;
-    top: 2.78%;
-    bottom: 90%;
-    height: 52px;
-    width: 88px;
-    border: 2px solid #000000;
-    box-sizing: border-box;
-    background: #ffffff;
-    cursor: pointer;
-    opacity: 0;
-    animation: fade 1s ease 0.2s forwards;
-  }
-
   .qr2 {
     position: absolute;
     display: flex;
@@ -35,4 +19,47 @@
     @include fadeAnimation();
   }
 
+  .box {
+    position: absolute;
+    left: 91.56%;
+    right: 1.56%;
+    top: 2.78%;
+    bottom: 90%;
+    height: 52px;
+    width: 88px;
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    background: #ffffff;
+    cursor: pointer;
+    opacity: 0;
+    animation: fade 1s ease 0.2s forwards;
+
+    .closeCross {
+      position: absolute;
+      top: 22px;
+      left: 30px;
+    }
+    .closeCross:before,
+    .closeCross:after {
+      content: "";
+      position: absolute;
+      width: 24px;
+      height: 2px;
+      background: black;
+    }
+    .closeCross:before {
+      transform: rotate(45deg);
+    }
+    .closeCross:after {
+      transform: rotate(-45deg);
+    }
+  }
+  .box:hover {
+    background-color: black;
+  }
+
+  // Изменение цвета креста при наведении
+  .box:hover .closeCross:before, .box:hover .closeCross:after{
+    background-color: white;
+  }
 }
