--- a/src/pages/main/Main.module.scss
+++ b/src/pages/main/Main.module.scss
@@ -81,7 +81,11 @@ aside {
   left: 47.5px;
   top: 295px;
 
-  background: #000000;
-  color: #86d3f4;
+  background: white;
+  color: black;
   order: 4;
 }
+  .btn:hover {
+    background: black;
+    color: #86d3f4;
+  }
