--- a/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
+++ b/src/components/phoneNumberWindow/PhoneNumberWindow.module.scss
@@ -15,6 +15,47 @@
   background: #86d3f4;
   @include fadeAnimation();
 
+  .tH2Req {
+    position: static;
+    width: 284px;
+    height: 76px;
+    left: 0px;
+    top: 0px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    text-align: center;
+    text-transform: uppercase;   position: static;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 15px 0px;
+  }
+  .tReq {
+    position: static;
+    height: 32px;
+    left: 0px;
+    top: 91px;
+
+    /* Sub text */
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+
+    /* Inside auto layout */
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 15px 0px;
+  }
+
   .tEnterNum {
     position: static;
     // width: 272px;
